--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,7 @@
+image:
+  file: .gitpod.Dockerfile
+
+
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
   - init: echo 'Setup Elm Tooling' # runs during prebuild
