--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,4 @@
+
 image:
   file: .gitpod.Dockerfile
 
@@ -12,3 +13,7 @@ tasks:
 ports:
   - port: 3000
     onOpen: open-preview
+
+vscode:
+  extensions:
+    - elmtooling.elm-ls-vscode
